src/objects/Attorney__c.object
<CustomObject>
    <fields>
        <fullName>Customer_End_Date__c</fullName>
        <label>Customer End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Start_Date__c</fullName>
        <label>Customer Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Law_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Law Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Legal Clients</relationshipLabel>
        <relationshipName>Attornies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lawyer_s_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lawyer&apos;s Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attorney For</relationshipLabel>
        <relationshipName>Attornies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Client__c</fullName>
        <label>Legal Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attornies</relationshipLabel>
        <relationshipName>Attornies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary_Attorney__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Attorney</label>
        <type>Checkbox</type>
    </fields>
    <label>Attorney</label>
    <nameField>
        <displayFormat>LAW-{00000}</displayFormat>
        <label>LAW Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attornies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>